[Payment Request] Correctly log the selected payment instrument on Desktop

Bug: 842156
Change-Id: I9867d575ed580e10e9d082514afc00550fb5337c
Reviewed-on: https://chromium-review.googlesource.com/1055475
Commit-Queue: Mathieu Perreault <mathp@chromium.org>
Commit-Queue: anthonyvd <anthonyvd@chromium.org>
Reviewed-by: anthonyvd <anthonyvd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#557878}
Former-commit-id: 23d25bfb8e720590b4730b4d745113be5e563c12