components/payments/content/payment_request.cc
@@ -18,6 +18,7 @@
 #include "components/payments/core/features.h"
 #include "components/payments/core/payment_details.h"
 #include "components/payments/core/payment_details_validation.h"
+#include "components/payments/core/payment_instrument.h"
 #include "components/payments/core/payment_prefs.h"
 #include "components/prefs/pref_service.h"
 #include "components/url_formatter/elide_url.h"
@@ -342,7 +343,24 @@ void PaymentRequest::OnConnectionTerminated() {
 
 void PaymentRequest::Pay() {
   journey_logger_.SetEventOccurred(JourneyLogger::EVENT_PAY_CLICKED);
-  journey_logger_.SetEventOccurred(JourneyLogger::EVENT_SELECTED_CREDIT_CARD);
+
+  // Log the correct "selected instrument" metric according to type.
+  DCHECK(state_->selected_instrument());
+  JourneyLogger::Event selected_event =
+      JourneyLogger::Event::EVENT_SELECTED_OTHER;
+  switch (state_->selected_instrument()->type()) {
+    case PaymentInstrument::Type::AUTOFILL:
+      selected_event = JourneyLogger::Event::EVENT_SELECTED_CREDIT_CARD;
+      break;
+    case PaymentInstrument::Type::SERVICE_WORKER_APP:
+      selected_event = JourneyLogger::Event::EVENT_SELECTED_OTHER;
+      break;
+    case PaymentInstrument::Type::NATIVE_MOBILE_APP:
+      NOTREACHED();
+      break;
+  }
+  journey_logger_.SetEventOccurred(selected_event);
+
   state_->GeneratePaymentResponse();
 }
 
